@@ -405,7 +405,7 @@ List of clusters to include in report. Default is local cluster.
 .TP
 .B End=<OPT>
 Period ending for report. Default is 23:59:59 of previous day. Note that while
-minutes and seconds are recognized, they will be rounded to the nearest hour as
+minutes and seconds are recognized, they will be rounded to the previous hour as
 reports cannot be generated for a more specific time range.
 Valid time formats are...
 .sp
@@ -434,7 +434,7 @@ justified. A \-30 will print 30 characters left justified.
 .TP
 .B Start=<OPT>
 Period start for report. Default is 00:00:00 of previous day. Note that while
-minutes and seconds are recognized, they will be rounded to the nearest hour as
+minutes and seconds are recognized, they will be rounded to the next hour as
 reports cannot be generated for a more specific time range.
 Valid time formats are...
 .sp
