@@ -2943,12 +2943,12 @@ extern int slurmdb_report_set_start_end_time(time_t *start, time_t *end)
 			      (long)my_time);
 			return SLURM_ERROR;
 		}
-		if (end_tm.tm_sec >= 30)
-			end_tm.tm_min++;
-		if (end_tm.tm_min >= 30)
-			end_tm.tm_hour++;
 	}
 
+	if (end_tm.tm_sec != 0)
+		end_tm.tm_min++;
+	if (end_tm.tm_min != 0)
+		end_tm.tm_hour++;
 	end_tm.tm_sec = 0;
 	end_tm.tm_min = 0;
 	(*end) = slurm_mktime(&end_tm);
@@ -2969,10 +2969,6 @@ extern int slurmdb_report_set_start_end_time(time_t *start, time_t *end)
 			      (long)my_time);
 			return SLURM_ERROR;
 		}
-		if (start_tm.tm_sec >= 30)
-			start_tm.tm_min++;
-		if (start_tm.tm_min >= 30)
-			start_tm.tm_hour++;
 	}
 	start_tm.tm_sec = 0;
 	start_tm.tm_min = 0;
